[package]
name = "media_infer"
version = "1.0.0"
authors = ["Ayush Singh <ayushsingh1325@gmail.com>"]
description = "Small Crate to infer various media containers. Works by reading Magic Bytes."
edition = "2018"
license = "MIT"
license-file = "LICENSE.org"
readme = "README.org"
repository = "https://github.com/Ayush1325/media_infer"
keywords = ["media", "container", "video", "magic-bytes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
